Notes/Kubernetes/GCP-MultiRegional-K8s-GatewayAPI-Setup/gateway-mc.yaml
# THIS FILE CAN BE APPLIED IN "CONFIG CLUSTER" i.e US-CENTRAL CLUSTER ONLY

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multi-cluster-internal-gw
  namespace: default
spec:
  gatewayClassName: gke-l7-cross-regional-internal-managed-mc # this is the cross regional internal managed gateway class
  addresses:
    - type: networking.gke.io/ephemeral-ipv4-address/us-central1 # specify the regions where the gateway needs to be created, and we need Cross-region Managed Proxy subnet in each region
      value: "us-central1"
    - type: networking.gke.io/ephemeral-ipv4-address/us-east1 # specify the regions where the gateway needs to be created, and we need Cross-region Managed Proxy subnet in each region
      value: "us-east1"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
