Notes/Kubernetes/GCP-MultiRegional-K8s-GatewayAPI-Setup/httproute-mc.yaml
# THIS FILE CAN BE APPLIED IN "CONFIG CLUSTER" i.e US-CENTRAL CLUSTER ONLY

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-mc-route
  namespace: default
spec:
  parentRefs:
    - name: multi-cluster-internal-gw
  hostnames:
    - nginx.gcp.saquib.com # replace with subdomain/url name that you will use in internal private cloud dns 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: net.gke.io
          kind: ServiceImport # Note: ServiceImport kind is used to reference multi-cluster services
          name: nginx-svc
          port: 80
